Just getting to the playa

--- a/whsign/data/www/manual.html
+++ b/whsign/data/www/manual.html
@@ -9,7 +9,7 @@
 
 <body id="manual">
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 708.66 354.33">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 708.66 354.33" id="simSign">
   <defs>
     <style>
       .cls-1, .cls-2, .cls-3, .cls-4, .cls-5 {
@@ -127,6 +127,12 @@
 </svg>
 
     <div id="stateNumber"></div>
+
+    <div id="controls">
+      <button onClick="stopAnim();">Stop</button>
+      <button onClick="runHomeHomo();">Home Homo</button>
+      <button onClick="runHomoLoop();">Homo Loop</button>
+    </div>
 
     <div id="log"></div>
 
