Sign post Decom

--- a/whsign/data/www/manual.html
+++ b/whsign/data/www/manual.html
@@ -132,6 +132,11 @@
       <button onClick="stopAnim();">Stop</button>
       <button onClick="runHomeHomo();">Home Homo</button>
       <button onClick="runHomoLoop();">Homo Loop</button>
+      <button onClick="runBinAnim();">Run Binary Anim</button>
+    </div>
+
+    <div>
+      <textarea id="binAnimText"></textarea>
     </div>
 
     <div id="log"></div>
