--- a/art_harness/data/www/index.html
+++ b/art_harness/data/www/index.html
@@ -10,8 +10,21 @@
     <link rel="stylesheet" type="text/css" href="ledart.css">
 </head>
 <body>
+    <div id="socketClosed">
+        <b>Socket Closed</b>
+        <button onClick="openSocket();")>Reopen</button>
+    </div>
+    <div id="socketOpen">
+        <i>Socket open!</i>
+    </div>
+
     <div>
-        Start:
+        Geometry:
+        <span id="geomButtons"></span>
+    </div>
+
+    <div>
+        Animation:
         <button onClick="requestNextAnim(false);">Next</button>
         <button onClick="requestNextAnim(true);">RANDOM</button>
         <span id="animButtons"></span>
@@ -40,23 +53,15 @@
     </div>
 
     <div>
-    Unit Type:
-    <button onClick="setUnitType(0);">Single</button>
-    <button onClick="setUnitType(1);">Each</button>
-    <button onClick="setUnitType(2);">Rows</button>
-    <button onClick="setUnitType(3);">Cols</button>
-    <button onClick="setUnitType(4);">US Cols</button>
-    <button onClick="setUnitType(5);">US Rows</button>
-    </div>
-
-    <div>
     Palette:
     <button onClick="setPaletteNum(0);">Red Blue</button>
-    <button onClick="setPaletteNum(1);">RYB</button>
-    <button onClick="setPaletteNum(2);">White Black</button>
-    <button onClick="setPaletteNum(3);">Blues</button>
-    <button onClick="setPaletteNum(4);">Pinks</button>
-    <button onClick="setPaletteNum(5);">Reds</button>
+    <button onClick="setPaletteNum(1);">RGB</button>
+    <button onClick="setPaletteNum(2);">RYB</button>
+    <button onClick="setPaletteNum(3);">White Black</button>
+    <button onClick="setPaletteNum(4);">Mardi Gras</button>
+    <button onClick="setPaletteNum(5);">Blues</button>
+    <button onClick="setPaletteNum(6);">Pinks</button>
+    <button onClick="setPaletteNum(7);">Reds</button>
     </div>
 
     <div>
@@ -70,7 +75,16 @@
     <div>
         <input type='text' id="colorChooser" />
     </div>
-    <div id="logXXX"></div>    
+
+    <input type="checkbox" id="cbDeviceLog" onChange="cbDeviceLogChange(event);" />
+    <label for="cbDeviceLog">Device Logs</label>
+
+    <input type="checkbox" id="cbShowNetwork" onChange="cbShowNetworkChange(event);" checked/>
+    <label for="cbShowNetwork">Show Network</label>
+
+    <button onClick="clearLog();">Clear Log</button>
+
+    <div id="log"></div>    
 
     <script src="ledart.js" type="text/javascript"></script>
 </body></html>
