--- a/art_harness/data/www/index.html
+++ b/art_harness/data/www/index.html
@@ -2956,10 +2956,12 @@ input[type="text"] {
     <div class="section">
         <input type="text" id="speedFactorToSet" value="1.0" size=5/><button onClick="setSpeedFactor();">Set Speed Factor</button>
         <div>
-            <button onClick="setSpeedFactor(4.0);">Quad</button>    
-            <button onClick="setSpeedFactor(2.0);">Double</button>    
+            <button onClick="setSpeedFactor(4.0);">Slowest</button>    
+            <button onClick="setSpeedFactor(2.0);">Slow</button>    
             <button onClick="setSpeedFactor(1.0);">Normal</button>    
-            <button onClick="setSpeedFactor(0.5);">Half</button>    
+            <button onClick="setSpeedFactor(0.5);">Fast</button>    
+            <button onClick="setSpeedFactor(0.2);">Faster</button>    
+            <button onClick="setSpeedFactor(0.01);">Crazy</button>    
         </div>
     </div>
 
